--- a/Pagina/css/styles.css
+++ b/Pagina/css/styles.css
@@ -23,7 +23,7 @@ body{
     height: 80px; /*Subir letra*/
     margin:40px auto;
     background-color: black;
-    opacity: 0.7   ;
+    opacity: 0.7;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -89,6 +89,7 @@ body{
 }
 .grid p{
     margin: 20px 30px;
+    color:red;
     
 }
 .grid div{
